<?xml version="1.0"?>
<package>
  <name>rosgo_messages</name>
  <version>0.0.0</version>
  <description>The rosgo_messages package</description>

  <maintainer email="akio7141@gmail.com">akio</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gengo</build_depend>
  <build_depend>gengo</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>map_store</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>rocon_device_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>rocon_tutorial_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>world_canvas_msgs</build_depend>
  <build_depend>yocs_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
